[metadata]
name = python-ffmpeg
version = attr: ffmpeg.__version__
url = https://github.com/jonghwanhyeon/python-ffmpeg
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
license = MIT
description = A python interface for FFmpeg using asyncio
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    ffmpeg
    asyncio

[options]
install_requires = pyee
python_requires = >=3.7
packages = find: